# tidb-strands-agent

./: .env.template  .gitignore  README.md  app_mcp.py  app_mcp_with_strands.py  pyproject.toml  strands-agent-with-TiDB.ipynb  test.ipynb  tidb_strands_agent.py
config/: config.json  mcp.json
setup/: customer_service_records.csv  product_reviews.csv  setup.sql  setup_embed copy.py  setup_embed.py
